--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" href="assets/images/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
@@ -15,10 +16,10 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/images/favicon.png" rel="icon">
+
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
+<script src="https://kit.fontawesome.com/9838a502d8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/templatemo-onix-digital.css">
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/owl.css">
@@ -64,7 +65,6 @@ https://templatemo.com/tm-565-onix-digital
               <li class="scroll-to-section"><a href="#portfolio">Galeri</a></li>
               <li class="scroll-to-section"><a href="#team">Kata Mereka</a></li>
               <li class="scroll-to-section"><a href="#video">Video</a></li>
-              <li class="scroll-to-section"><a href="#contact">Kontak</a></li>
               <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#pricing">Beli Sekarang!</a></div></li>
             </ul>
             <a class='menu-trigger'>
@@ -89,7 +89,7 @@ https://templatemo.com/tm-565-onix-digital
                   <h2>Kesenangan <br><em>tak terbatas</em></br> dalam <span>56 kartu</span>!</h2>
                   <p>Maen merupakan solusi bagi kamu yang resah akan fenomena <i>Phubbing</i></p>
                   <div class="down-buttons">
-                    <div class="main-blue-button-hover">
+                    <div class="main-blue-button-hover scroll-to-section">
                       <a href="#contact">Pesan sekarang!</a>
                     </div>
                   </div>
@@ -340,59 +340,8 @@ https://templatemo.com/tm-565-onix-digital
   </section><!-- End Team Section -->
 
 
-  <div id="pricing" class="pricing-tables">
-    <div class="tables-left-dec">
-      <img src="assets/images/tables-left-dec.png" alt="">
-    </div>
-    <div class="tables-right-dec">
-      <img src="assets/images/tables-right-dec.png" alt="">
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 offset-lg-3">
-          <div class="section-heading">
-            <h2>Pilih kartu yang <em>cocok</em> untuk <span>kamu!</span></h2>
-          </div>
-        </div>
-      </div>
-      <div class="row justify-content-center">
 
 
-        <div class="col-lg-4">
-          <div class="item third-item">
-            <h4>Maen.</h4>
-            <span>Rp.98.000</span>
-            <ul>
-              <li>56 Kartu Multifungsi</li>
-              <li>4 Permainan dalam 1 Kartu</li>
-              <li>Terintegrasi dengan Aplikasi</li>
-              <li>Buat Pertemanan Lebih Seru!</li>
-            </ul>
-            <div class="main-white-button-hover">
-              <a href="#contact">Beli Sekarang!</a>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="item second-item">
-            <h4>Edisi Pasangan</h4>
-            <span>Rp.68.000</span>
-            <ul>
-              <li>20 Pertanyaan tentang Cinta</li>
-              <li>Gift Card untuk Kamu dan Dia</li>
-              <li>Terintegrasi dengan Aplikasi</li>
-              <li>Cocok untuk Kamu dan Dia</li>
-            </ul>
-            <div class="main-white-button-hover">
-                <a href="#contact">Beli Sekarang!</a>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
   <div id="video" class="our-videos section">
@@ -432,28 +381,7 @@ https://templatemo.com/tm-565-onix-digital
                         </div>
                       </div>
                     </li>
-                    <li>
-                      <div>
-                        <div class="thumb">
-                          <iframe width="100%" height="auto" src="https://www.youtube.com/embed/ZlfAjbQiL78" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                          <div class="overlay-effect">
-                            <a href="#"><h4>Project Three</h4></a>
-                            <span>Digital &amp; Marketing</span>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="thumb">
-                          <iframe width="100%" height="auto" src="https://www.youtube.com/embed/mx1WseE7-0Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                          <div class="overlay-effect">
-                            <a href="#"><h4>Fourth Project</h4></a>
-                            <span>SEO &amp; Advertising</span>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
+
                   </ul>
                 </div>
                 <div class="col-lg-4">
@@ -488,58 +416,79 @@ https://templatemo.com/tm-565-onix-digital
     </div>
   </div>
 
-  <div id="contact" class="contact-us section">
+
+
+
+  <div id="pricing" class="pricing-tables">
+    <div class="tables-left-dec">
+      <img src="assets/images/tables-left-dec.png" alt="">
+    </div>
+    <div class="tables-right-dec">
+      <img src="assets/images/tables-right-dec.png" alt="">
+    </div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-7">
+        <div class="col-lg-6 offset-lg-3">
           <div class="section-heading">
-            <h2>Feel free to <em>Contact</em> us via the <span>HTML form</span></h2>
-            <div id="map">
-              <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="360px" frameborder="0" style="border:0" allowfullscreen=""></iframe>
-            </div>
-            <div class="info">
-              <span><i class="fa fa-phone"></i> <a href="#">010-020-0340<br>090-080-0760</a></span>
-              <span><i class="fa fa-envelope"></i> <a href="#">info@company.com<br>mail@company.com</a></span>
-            </div>
+            <h2>Pilih kartu yang <em>cocok</em> untuk <span>kamu!</span></h2>
           </div>
         </div>
-        <div class="col-lg-5 align-self-center">
-          <form id="contact" action="" method="get">
-            <div class="row">
-              <div class="col-lg-12">
-                <fieldset>
-                  <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
-                </fieldset>
-              </div>
-              <div class="col-lg-12">
-                <fieldset>
-                  <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on" required>
-                </fieldset>
-              </div>
-              <div class="col-lg-12">
-                <fieldset>
-                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
-                </fieldset>
-              </div>
-              <div class="col-lg-12">
-                <fieldset>
-                  <input type="text" name="website" id="website" placeholder="Your Website URL" required="">
-                </fieldset>
-              </div>
-              <div class="col-lg-12">
-                <fieldset>
-                  <button type="submit" id="form-submit" class="main-button">Submit Request</button>
-                </fieldset>
-              </div>
+      </div>
+      <div class="row justify-content-center">
+
+
+        <div class="col-lg-4">
+          <div class="item third-item">
+            <h4>Maen.</h4>
+            <span>Rp.98.000</span>
+            <ul>
+              <li>56 Kartu Multifungsi</li>
+              <li>4 Permainan dalam 1 Kartu</li>
+              <li>Terintegrasi dengan Aplikasi</li>
+              <li>Buat Pertemanan Lebih Seru!</li>
+            </ul>
+            <div class="main-tokopedia-button-hover scroll-to-section">
+                <a href="#contact">Beli di Tokopedia!</a>
             </div>
-          </form>
+            <div class="main-shopee-button-hover scroll-to-section">
+                <a href="#contact">Beli di Shopee!</a>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="item second-item">
+            <h4>Edisi Pasangan</h4>
+            <span>Rp.68.000</span>
+            <ul>
+              <li>20 Pertanyaan tentang Cinta</li>
+              <li>Gift Card untuk Kamu dan Dia</li>
+              <li>Terintegrasi dengan Aplikasi</li>
+              <li>Cocok untuk Kamu dan Dia</li>
+            </ul>
+            <div class="main-tokopedia-button-hover scroll-to-section">
+                <a href="#contact">Beli di Tokopedia!</a>
+            </div>
+            <div class="main-shopee-button-hover scroll-to-section">
+                <a href="#contact">Beli di Shopee!</a>
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-
-
+  <div class="container">
+        <div class="text-center center-block">
+    <br />
+        <br />
+            <br />
+                <a href="https://www.instagram.com/maenkartu"><i id="social-fb" class="fab fa-instagram fa-3x social"></i></a>
+	            <a href="https://api.whatsapp.com/send/?phone=6287896732600&text=Halo+Teman+Maen%21%EF%BF%BD%0A%0ATerima+kasih+telah+menghubungi+kami%21%0AApabila+terdapat+saran%2C+masukan%2C+atau+pertanyaan%2C+bisa+ditulis+dibawah+sini+yaa%21&"><i id="social-tw" class="fab fa-whatsapp fa-3x social"></i></a>
+	            <a href="mailto:maenkartu.id@gmail.com"><i id="social-em" class="far fa-envelope fa-3x social"></i></a>
+</div>
+</div>
 
 
 
@@ -551,6 +500,7 @@ https://templatemo.com/tm-565-onix-digital
   <script src="assets/js/animation.js"></script>
   <script src="assets/js/imagesloaded.js"></script>
   <script src="assets/js/custom.js"></script>
+
 
   <script>
   // Acc
