--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button onclick="location.href='https://www.tokopedia.com/maenkartu'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Tokopedia</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://www.instagram.com/maenkartu'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Tokopedia</button>
+                    <button onclick="location.href='https://www.instagram.com/maenkartu'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Instagram</button>
                 </div>
                 <div style="padding-bottom: 30px;">
                     <button onclick="location.href='https://play.google.com/store/apps/details?id=com.maenkartu.maen'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Google Play</button>
