--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-  
+
 <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -228,7 +228,7 @@ https://templatemo.com/tm-565-onix-digital
                 <img src="assets/images/portfolio-01.jpg" alt="">
                 <div class="hover-effect">
                   <div class="inner-content">
-                    <a rel="sponsored" href="https://templatemo.com/tm-564-plot-listing" target="_parent"><h4>Maen Kartu</h4></a>
+                    <a rel="sponsored" href="#" target="_parent"><h4>Maen Kartu</h4></a>
                     <span>Buat pertemananmu berwarna!</span>
                   </div>
                 </div>
@@ -250,7 +250,7 @@ https://templatemo.com/tm-565-onix-digital
                 <img src="assets/images/portfolio-03.jpg" alt="">
                 <div class="hover-effect">
                   <div class="inner-content">
-                    <a rel="sponsored" href="https://templatemo.com/tm-562-space-dynamic" target="_parent"><h4>Maen Kartu</h4></a>
+                    <a rel="sponsored" href="#" target="_parent"><h4>Maen Kartu</h4></a>
                     <span>Asik tanpa ribet!</span>
                   </div>
                 </div>
