--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <button onclick="location.href='mailto:maenkartu.id@gmail.com'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Email</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://rainorth.github.io/home.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Website</button>
+                    <button onclick="location.href='home.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Website</button>
                 </div>
             </div>
     </div>
