--- a/home.html
+++ b/home.html
@@ -66,6 +66,7 @@ https://templatemo.com/tm-565-onix-digital
               <li class="scroll-to-section"><a href="#portfolio">Galeri</a></li>
               <li class="scroll-to-section"><a href="#team">Kata Mereka</a></li>
               <li class="scroll-to-section"><a href="#video">Video</a></li>
+              <li class=""><a href="index.html">Landing Page</a></li>
               <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#pricing">Beli Sekarang!</a></div></li>
             </ul>
             <a class='menu-trigger'>
