--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+<link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
@@ -66,7 +66,7 @@ https://templatemo.com/tm-565-onix-digital
               <li class="scroll-to-section"><a href="#portfolio">Galeri</a></li>
               <li class="scroll-to-section"><a href="#team">Kata Mereka</a></li>
               <li class="scroll-to-section"><a href="#video">Video</a></li>
-              <li class=""><a href="index.html">Landing Page</a></li>
+              <li><a href="index.html">Landing Page</a></li>
               <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#pricing">Beli Sekarang!</a></div></li>
             </ul>
             <a class='menu-trigger'>
