--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://shopee.co.id/maenkartu'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Shopee</button>
+                    <button onclick="location.href='https://shopee.co.id/maenkartu'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;"><a>Shopee</a></button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://www.tokopedia.com/maenkartu'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Tokopedia</button>
+                    <button onclick="location.href='https://www.tokopedia.com/maenkartu'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Tokopedia</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://www.instagram.com/maenkartu'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Instagram</button>
+                    <button onclick="location.href='https://www.instagram.com/maenkartu'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Instagram</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://play.google.com/store/apps/details?id=com.maenkartu.maen'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Google Play</button>
+                    <button onclick="location.href='https://play.google.com/store/apps/details?id=com.maenkartu.maen'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Google Play</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://t.me/maenkartubot'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Telegram</button>
+                    <button onclick="location.href='https://t.me/maenkartubot'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Telegram</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://api.whatsapp.com/send/?phone=6287896732600&text=Halo+Teman+Maen%21%EF%BF%BD%0A%0ATerima+kasih+telah+menghubungi+kami%21%0AApabila+terdapat+saran%2C+masukan%2C+atau+pertanyaan%2C+bisa+ditulis+dibawah+sini+yaa%21&'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Whatsapp</button>
+                    <button onclick="location.href='https://api.whatsapp.com/send/?phone=6287896732600&text=Halo+Teman+Maen%21%EF%BF%BD%0A%0ATerima+kasih+telah+menghubungi+kami%21%0AApabila+terdapat+saran%2C+masukan%2C+atau+pertanyaan%2C+bisa+ditulis+dibawah+sini+yaa%21&'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Whatsapp</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='mailto:maenkartu.id@gmail.com'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Email</button>
+                    <button onclick="location.href='mailto:maenkartu.id@gmail.com'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Email</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='home.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Website</button>
+                    <button onclick="location.href='home.html'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Website</button>
                 </div>
             </div>
     </div>
