--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 
-<head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<head>
 
     <title>Maen Kartu</title>
 
