--- a/home.html
+++ b/home.html
@@ -228,7 +228,7 @@ https://templatemo.com/tm-565-onix-digital
                 <img src="assets/images/portfolio-01.jpg" alt="">
                 <div class="hover-effect">
                   <div class="inner-content">
-                    <a rel="sponsored" href="#" target="_parent"><h4>Maen Kartu</h4></a>
+                    <a><h4>Maen Kartu</h4></a>
                     <span>Buat pertemananmu berwarna!</span>
                   </div>
                 </div>
@@ -239,7 +239,7 @@ https://templatemo.com/tm-565-onix-digital
                 <img src="assets/images/portfolio-02.jpg" alt="">
                 <div class="hover-effect">
                   <div class="inner-content">
-                    <a href="#"><h4>Edisi Pasangan</h4></a>
+                    <a><h4>Edisi Pasangan</h4></a>
                     <span>Untuk kamu &amp; Pasanganmu</span>
                   </div>
                 </div>
@@ -250,7 +250,7 @@ https://templatemo.com/tm-565-onix-digital
                 <img src="assets/images/portfolio-03.jpg" alt="">
                 <div class="hover-effect">
                   <div class="inner-content">
-                    <a rel="sponsored" href="#" target="_parent"><h4>Maen Kartu</h4></a>
+                    <a><h4>Maen Kartu</h4></a>
                     <span>Asik tanpa ribet!</span>
                   </div>
                 </div>
@@ -261,7 +261,7 @@ https://templatemo.com/tm-565-onix-digital
                 <img src="assets/images/portfolio-04.jpg" alt="">
                 <div class="hover-effect">
                   <div class="inner-content">
-                    <a href="#"><h4>Edisi Pasangan</h4></a>
+                    <a><h4>Edisi Pasangan</h4></a>
                     <span>Perdalam hubunganmu dengan si Dia.</span>
                   </div>
                 </div>
