--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-565-onix-digital
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
+            <a href="home" class="logo">
               <img src="assets/images/logo.png">
             </a>
             <!-- ***** Logo End ***** -->
@@ -65,7 +65,7 @@ https://templatemo.com/tm-565-onix-digital
               <li class="scroll-to-section"><a href="#portfolio">Galeri</a></li>
               <li class="scroll-to-section"><a href="#team">Kata Mereka</a></li>
               <li class="scroll-to-section"><a href="#video">Video</a></li>
-              <li><a href="index.html">Landing Page</a></li>
+              <li><a href="index">Landing Page</a></li>
               <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#pricing">Beli Sekarang!</a></div></li>
             </ul>
             <a class='menu-trigger'>
