--- a/home.html
+++ b/home.html
@@ -171,7 +171,7 @@ https://templatemo.com/tm-565-onix-digital
                     </div>
                     <div class="count-digit">4</div>
                     <div class="count-title">Permainan</div>
-                    <p>Jujur/Berani, Remi, Connect, Werewolf, dan Link-It</p>
+                    <p>Jujur/Berani, Remi, Connect, dan Werewolf</p>
                   </div>
                 </div>
               </div>
