--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@ https://templatemo.com/tm-565-onix-digital
                   <p>Maen merupakan solusi bagi kamu yang resah akan fenomena <i>Phubbing</i></p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover scroll-to-section">
-                      <a href="#contact">Pesan sekarang!</a>
+                      <a href="#pricing">Pesan sekarang!</a>
                     </div>
                   </div>
                 </div>
