--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@ https://templatemo.com/tm-565-onix-digital
               <li class="scroll-to-section"><a href="#portfolio">Galeri</a></li>
               <li class="scroll-to-section"><a href="#team">Kata Mereka</a></li>
               <li class="scroll-to-section"><a href="#video">Video</a></li>
-              <li><a href="www.maenkartu.id/index">Landing Page</a></li>
+              <li><a href="index">Landing Page</a></li>
               <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#pricing">Beli Sekarang!</a></div></li>
             </ul>
             <a class='menu-trigger'>
