--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <button onclick="location.href='mailto:maenkartu.id@gmail.com'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Email</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='www.maenkartu.id/home'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Website</button>
+                    <button onclick="location.href='home'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Website</button>
                 </div>
             </div>
     </div>
