--- a/home.html
+++ b/home.html
@@ -449,10 +449,10 @@ https://templatemo.com/tm-565-onix-digital
               <li>Buat Pertemanan Lebih Seru!</li>
             </ul>
             <div class="main-tokopedia-button-hover scroll-to-section">
-                <a href="#contact">Beli di Tokopedia!</a>
+                <a href="https://www.tokopedia.com/maenkartu">Beli di Tokopedia!</a>
             </div>
             <div class="main-shopee-button-hover scroll-to-section">
-                <a href="#contact">Beli di Shopee!</a>
+                <a href="https://shopee.co.id/maenkartu">Beli di Shopee!</a>
             </div>
 
           </div>
@@ -468,10 +468,10 @@ https://templatemo.com/tm-565-onix-digital
               <li>Cocok untuk Kamu dan Dia</li>
             </ul>
             <div class="main-tokopedia-button-hover scroll-to-section">
-                <a href="#contact">Beli di Tokopedia!</a>
+                <a href="https://www.tokopedia.com/maenkartu">Beli di Tokopedia!</a>
             </div>
             <div class="main-shopee-button-hover scroll-to-section">
-                <a href="#contact">Beli di Shopee!</a>
+                <a href="https://shopee.co.id/maenkartu">Beli di Shopee!</a>
             </div>
 
           </div>
