--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@ https://templatemo.com/tm-565-onix-digital
             <div class="item">
               <h4>Multifungsi</h4>
               <div class="icon"><img src="assets/images/service-icon-01.png" alt=""></div>
-              <p>4 permainan dalam 1 kartu</p>
+              <p>5 permainan dalam 1 kartu</p>
             </div>
             <div class="item">
               <h4>Ada Aplikasinya!</h4>
@@ -169,9 +169,9 @@ https://templatemo.com/tm-565-onix-digital
                     <div class="icon">
                       <img src="assets/images/service-icon-01.png" alt="">
                     </div>
-                    <div class="count-digit">4</div>
+                    <div class="count-digit">5</div>
                     <div class="count-title">Permainan</div>
-                    <p>Jujur/Berani, Remi, Connect, dan Werewolf</p>
+                    <p>Jujur/Berani, Remi, Connect, Werewolf, dan Link-It!</p>
                   </div>
                 </div>
               </div>
@@ -345,77 +345,7 @@ https://templatemo.com/tm-565-onix-digital
 
 
 
-  <div id="video" class="our-videos section">
-    <div class="videos-left-dec">
-      <img src="assets/images/videos-left-dec.png" alt="">
-    </div>
-    <div class="videos-right-dec">
-      <img src="assets/images/videos-right-dec.png" alt="">
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="naccs">
-            <div class="grid">
-              <div class="row">
-                <div class="col-lg-8">
-                  <ul class="nacc">
-                    <li class="active">
-                      <div>
-                        <div class="thumb">
-                          <iframe width="100%" height="auto" src="https://www.youtube.com/embed/ZZ7yD2usOrI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                          <div class="overlay-effect">
-                            <a href="#"><h4>Maen?</h4></a>
-                            <span>Apa itu Maen?</span>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="thumb">
-                          <iframe width="100%" height="auto" src="https://www.youtube.com/embed/TwknsS8jIDY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                          <div class="overlay-effect">
-                            <a href="#"><h4>Tutorial Jujur/Berani</h4></a>
-                            <span>Cara maen Jujur/Berani</span>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
 
-                  </ul>
-                </div>
-                <div class="col-lg-4">
-                  <div class="menu">
-                    <div class="active">
-                      <div class="thumb">
-                        <img src="assets/images/video-thumb-01.png" alt="">
-                        <div class="inner-content">
-                          <h4>Maen?</h4>
-                          <span>Apa itu Maen?</span>
-                        </div>
-                      </div>
-                    </div>
-                    <div>
-                      <div class="thumb">
-                        <img src="assets/images/video-thumb-02.png" alt="">
-                        <div class="inner-content">
-                          <h4>Tutorial Jujur/Berani</h4>
-                          <span>Cara maen Jujur/Berani</span>
-                        </div>
-                      </div>
-                    </div>
-
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
 
