--- a/instruction.html
+++ b/instruction.html
@@ -4,7 +4,7 @@
     <title>Instruksi Maen.</title>
   </head>
   <body>
-    <iframe src="assets/instruction.pdf#toolbar=0" width="100%" height="500px">
+    <iframe src="assets/instruction.pdf" width="100%" height="500px">
     </iframe>
   </body>
 </html>
