--- a/instruction.html
+++ b/instruction.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Instruksi Maen.</title>
-
+      <meta http-equiv='refresh' content='0; URL=http://www.maenkartu.id/assets/instruction.pdf'>
   </head>
   <body>
-    <div align="center" style="background-color:black;width:100%;height:660px">
+    <!--><div align="center" style="background-color:black;width:100%;height:660px">
       <embed style="width:70%;height:100%" src="assets/instruction.pdf" type="application/pdf"></embed>
-    </div>
+    </div><!-->
   </body>
 </html>
