--- a/instruction.html
+++ b/instruction.html
@@ -5,8 +5,6 @@
       <meta http-equiv='refresh' content='0; URL=http://www.maenkartu.id/assets/instruction.pdf'>
   </head>
   <body>
-    <!--><div align="center" style="background-color:black;width:100%;height:660px">
-      <embed style="width:70%;height:100%" src="assets/instruction.pdf" type="application/pdf"></embed>
-    </div><!-->
+    <div align="center"><h1>Silahkan refresh browser kamu instruksi Maen tidak muncul.</h1></div>
   </body>
 </html>
