--- a/instruction.html
+++ b/instruction.html
@@ -5,6 +5,6 @@
       <meta http-equiv='refresh' content='0; URL=http://www.maenkartu.id/assets/instruction.pdf'>
   </head>
   <body>
-    <div align="center"><h1 style="color:orange;">Silahkan refresh browser kamu instruksi Maen tidak muncul.</h1></div>
+    <div align="center"><h1 style="color:orange;">Silahkan refresh browser kamu instruksi Maen tidak muncul dalam waktu 5 detik.</h1></div>
   </body>
 </html>
