--- a/Secretsss.html
+++ b/Secretsss.html
@@ -137,7 +137,7 @@
 	<script type='text/javascript' src='Secretsss.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"Secretsss","experimentalVK":false,"fileSizes":{"Secretsss.pck":370400,"Secretsss.wasm":18140456},"gdnativeLibs":[]};
+		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"Secretsss","experimentalVK":false,"fileSizes":{"Secretsss.pck":3091104,"Secretsss.wasm":12665632},"gdnativeLibs":[]};
 		var engine = new Engine(GODOT_CONFIG);
 
 		(function() {
