--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                     <button onclick="location.href='https://www.instagram.com/maenkartu'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Instagram</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://play.google.com/store/apps/details?id=com.maenkartu.maen'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Google Play</button>
+                    <button onclick="location.href='https://apps.apple.com/id/app/maen/id1592824643'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">App Store (iOS)</button>
+                </div>
+                <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='https://play.google.com/store/apps/details?id=com.maenkartu.maen'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Google Play (Android)</button>
                 </div>
                 <div style="padding-bottom: 30px;">
                     <button onclick="location.href='https://t.me/maenkartubot'" type="button" class="btn btn-outline-light" style="color: #000; width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600; border-radius: 100px; background-color: #fff; border: none;">Telegram</button>
